--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
       <h1>Discover hidden places in the world around you</h1>
       <p><a href="#">Download Excursion (Coming Soon)</a></p>
     </div>
+    <div class="video">
+      <video src="./resources/videos/excursion.mp4" autoplay>
+      </video>
+    </div>
+    <div class="travelguide">
+      <h2>Your personal travel guide</h2>
+      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+      <p><img src="./resources/images/camp.jpg" alt="tentpic"></p>
+    </div>
+    <div class="phoneinfo">
+      <p><img src="./resources/images/phone.png" alt="cell phone"></p>
+      <h2>Coming soon for iPhone and Android</h2>
+      <p><a href="#">Download Excursion (Coming Soon)</a></p>
+    </div>
   </body>
 </html>
