--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   <body>
     <div class="heading">
       <h1>Discover hidden places in the world around you</h1>
-      <p><a href="#">Download Excursion (Coming Soon)</a></p>
+      <p class="download"><a href="#">Download Excursion (Coming Soon)</a></p>
     </div>
     <div class="video">
-      <video src="./resources/videos/excursion.mp4" autoplay>
-      </video>
+      <p><video src="./resources/videos/excursion.mp4" autoplay></video></p>
     </div>
     <div class="travelguide">
       <h2>Your personal travel guide</h2>
@@ -22,7 +21,10 @@
     <div class="phoneinfo">
       <p><img src="./resources/images/phone.png" alt="cell phone"></p>
       <h2>Coming soon for iPhone and Android</h2>
-      <p><a href="#">Download Excursion (Coming Soon)</a></p>
+      <p class="download"><a href="#">Download Excursion (Coming Soon)</a></p>
+    </div>
+    <div class="copyright">
+      <p class=copy>Copyright</p>
     </div>
   </body>
 </html>
