--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p class="download"><a href="#">Download Excursion (Coming Soon)</a></p>
     </div>
     <div class="copyright">
-      <p class=copy>Copyright</p>
+      <p class=copy>&copy Excursion</p>
     </div>
   </body>
 </html>
